Delete match and ticket